kubernetes/apps/base/tika/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tika
  namespace: tika
spec:
  description: "Allow ingress from consuming apps (Open WebUI, Paperless) to Tika"
  endpointSelector: {}
  ingress:
    # Open WebUI content extraction
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: openwebui
            app.kubernetes.io/name: openwebui
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    # Paperless (when PAPERLESS_TIKA_ENABLED is set in future)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  egress: []
